--- a/semanda1/api2/package.json
+++ b/semanda1/api2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs",
+  "name": "api2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4"
   }
 }
